aplicación de colores de sección e implentación de footer con slide de texto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<mat-slide-toggle (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
+
 <app-table></app-table>
+<!-- <app-table-dos></app-table-dos> -->
+<app-footer></app-footer>
