--- a/src/app/dashboard/pages/table/table.component.html
+++ b/src/app/dashboard/pages/table/table.component.html
@@ -1,6 +1,6 @@
 
-
-<mat-slide-toggle (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
+<!-- 
+<mat-slide-toggle (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle> -->
 
 <div class="col-10 m-auto mt-5 mat-app-background">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -15,7 +15,7 @@
         <th mat-header-cell *matHeaderCellDef> Activo </th>
         <td mat-cell *matCellDef="let element"> 
           <mat-icon color="primary" *ngIf="element.active"> check_circle </mat-icon>
-          <mat-icon color="accent" *ngIf="!element.active"> cancel </mat-icon>         
+          <mat-icon style="color: #707b7c" *ngIf="!element.active"> cancel </mat-icon>         
         </td>
       </ng-container>
     
@@ -44,21 +44,37 @@
       </ng-container>
 
       <!-- lastChange Column -->
-      <ng-container matColumnDef="lastChange" class="text-start">
+      <ng-container matColumnDef="lastChange">
         <th class="text-center" mat-header-cell *matHeaderCellDef> Ultimos Cambios </th>
-        <td class="text-center col-2 pt-2 pb-2" mat-cell *matCellDef="let element">
-          <mat-accordion>
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                                 (closed)="panelOpenState = false"
-                                 >
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Self aware panel
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <p>I'm visible because I am open</p>
-            </mat-expansion-panel>
-          </mat-accordion> 
+        <td class="text-center p-2" mat-cell *matCellDef="let element">
+          <mat-menu #menu="matMenu" class="mat-app-background">
+            <div class="p-2">
+              <p>
+                | inicio de sesion hoy a la 6:00 pm 
+              </p>
+              <p>
+                | Registro de usuario
+              </p>
+              <p>
+                | Inicio de sesion hace 2 días
+              </p>
+              <p>
+                | Inicio de sesion hoy
+              </p>
+            </div>
+          </mat-menu>
+
+          <button
+            class="w-50 m-auto"
+            style="border: 5px solid #53AFB5; border-radius: 10px;"
+            mat-menu-item
+            [matMenuTriggerFor]="menu"
+            aria-label="Más opciones"
+            matTooltip="Más opciones"
+          >
+            lista de cambios <mat-icon>expand_more</mat-icon>  
+          </button>
+
         </td>
       </ng-container>
 
@@ -66,7 +82,37 @@
       <ng-container matColumnDef="actions">
         <th class="text-center" mat-header-cell *matHeaderCellDef> Acciones </th>
         <td class="text-center" mat-cell *matCellDef="let element">
-          <mat-icon>menu</mat-icon>
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              aria-label="Otra acción"
+            >
+              <mat-icon color="primary">edit</mat-icon> Editar
+            </button>
+
+            <button
+              mat-menu-item
+              aria-label="Otra acción"
+            >
+              <mat-icon color="primary">close</mat-icon> Quitar de staff
+            </button>
+
+            <button
+              mat-menu-item
+              aria-label="Otra acción"
+            >
+              <mat-icon color="primary">delete</mat-icon> Baja
+            </button> 
+          </mat-menu>
+
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Más opciones"
+            matTooltip="Más opciones"
+          >
+            <mat-icon color="primary">menu</mat-icon>
+          </button>
         </td>
       </ng-container>
     
