ajustes visuales KoobenPos: Ajustes de colores y homologación de estilo basado en los diseños

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-slide-toggle (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
+<mat-slide-toggle color="primary" (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
 
 <app-table></app-table>
 <!-- <app-table-dos></app-table-dos> -->
