--- a/src/app/dashboard/pages/footer/footer.component.html
+++ b/src/app/dashboard/pages/footer/footer.component.html
@@ -4,8 +4,10 @@
             {{plato.nombre}}
         </button>
     </div>
+</div>
 
-    <div class="wrapper col-12 mt-4 text-center mat-app-background" style="border: 5px solid #53AFB5; border-radius: 10px;">
+<div class="row m-auto mt-5">
+    <div class="wrapper col-12 mt-4 mb-4 text-center mat-app-background" style="border: 5px solid #53AFB5; border-radius: 10px;">
         <div class="slider" id="slider">
           <ul class="slides">
             <li class="slide">
@@ -25,3 +27,84 @@
     </div>
 </div>
 
+
+<div class="row m-auto mt-5">
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 bebida" mat-raised-button>
+            Bebidas 
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 desyunos" mat-raised-button>
+            Desayunos
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 carnes" mat-raised-button>
+            Carnes y aves 
+        </button>
+    <!-- </div> -->
+<!-- 
+    <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 hamburgesas" mat-raised-button>
+            Hamburgesas y sadwiches 
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 bebida" mat-raised-button>
+            Pastas
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 desyunos" mat-raised-button>
+            Ensaladas 
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 carnes" mat-raised-button>
+            Postres  
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 hamburgesas" mat-raised-button>
+            Entradas 
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 bebida"mat-raised-button>
+            Pescado  
+        </button>
+    <!-- </div> -->
+
+    <!-- <div class="col-1 m-auto"> -->
+        <button class="col-1 m-auto p-5 mexican" mat-raised-button>
+            Comida Méxicana 
+        </button>
+    <!-- </div> -->
+</div>
+
+<div class="row m-auto mt-1">
+    <div class="slider col-11 m-auto mt-2 mb-4 mat-app-background slideSec" id="slider">
+        <ul class="slides">
+          <li class="slide">
+            <p>Come Todo por $186</p>
+          </li>
+          <li class="slide">
+            <p>Helados 2x1</p>
+          </li>
+          <li class="slide">
+            <p>Miercoles de bebidas</p>
+          </li>
+          <li class="slide">
+            <p>Si comes 15 tacos en menos de 15 min todo gratis</p>
+          </li>
+        </ul>
+    </div>
+</div>
