Implementación de keyboard dinamico y paleta de colores personalizada, además de modo nocturno

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<mat-slide-toggle color="primary" (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
+<mat-slide-toggle class="color-blue-water" (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle>
 
-<app-table></app-table>
+<app-table></app-table> 
+<app-footer></app-footer> 
+<app-keyboard></app-keyboard>
+
+
 <!-- <app-table-dos></app-table-dos> -->
-<app-footer></app-footer>
