--- a/src/app/dashboard/pages/footer/footer.component.html
+++ b/src/app/dashboard/pages/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class="row m-auto mt-5">
+<!-- <div class="row m-auto mt-5">
     <div class="col-1 m-auto" *ngFor="let plato of PLATILLOS">
-        <button class="w-100 p-5" style="height: 50px;" mat-raised-button color="primary">
+        <button class="w-100 p-5" style="height: 50px;" mat-raised-button class="blue-water">
             {{plato.nombre}}
         </button>
     </div>
@@ -25,69 +25,49 @@
           </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <div class="row m-auto mt-5">
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 bebida" mat-raised-button>
-            Bebidas 
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-blue-water color-white general" mat-raised-button>
+        Bebidas 
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 desyunos" mat-raised-button>
-            Desayunos
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-candy-red color-white general" mat-raised-button>
+        Desayunos
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 carnes" mat-raised-button>
-            Carnes y aves 
-        </button>
-    <!-- </div> -->
-<!-- 
-    <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 hamburgesas" mat-raised-button>
-            Hamburgesas y sadwiches 
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-orange color-white general" mat-raised-button>
+        Carnes y aves 
+    </button>
+    
+    <button class="col-1 m-auto p-5 bg-purple color-white general" mat-raised-button>
+        Hamburgesas y sadwiches 
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 bebida" mat-raised-button>
-            Pastas
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-blue-water color-white general" mat-raised-button>
+        Pastas
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 desyunos" mat-raised-button>
-            Ensaladas 
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-candy-red color-white general" mat-raised-button>
+        Ensaladas 
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 carnes" mat-raised-button>
-            Postres  
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-orange color-white general" mat-raised-button>
+        Postres  
+    </button>
+    
+    <button class="col-1 m-auto p-5 bg-purple color-white general" mat-raised-button>
+        Entradas 
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 hamburgesas" mat-raised-button>
-            Entradas 
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 bg-blue-water color-white general" mat-raised-button>
+        Pescado  
+    </button>
 
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 bebida"mat-raised-button>
-            Pescado  
-        </button>
-    <!-- </div> -->
-
-    <!-- <div class="col-1 m-auto"> -->
-        <button class="col-1 m-auto p-5 mexican" mat-raised-button>
-            Comida Méxicana 
-        </button>
-    <!-- </div> -->
+    <button class="col-1 m-auto p-5 mexican general" mat-raised-button>
+        Comida Méxicana 
+    </button>
 </div>
 
 <div class="row m-auto mt-1">
