--- a/src/app/dashboard/pages/footer/footer.component.scss
+++ b/src/app/dashboard/pages/footer/footer.component.scss
@@ -41,36 +41,9 @@
 	border-radius: 30px 0px 0px 0px;
 }
 
-.bebida, .pastas, .pes{
+.general{
 	font-size: 18px;
 	border-radius: 10px;
-	background-color: #53AFB5 !important; 
-	color: #fff !important;
 }
 
-.desyunos, .enchi{
-	font-size: 18px;
-	border-radius: 10px;
-	background-color: #EF3946 !important;
-	color: #fff !important;
-}
 
-.carnes, .postres{
-	font-size: 18px;
-	border-radius: 10px;
-	background-color: #F78F36 !important;
-	color: #fff !important;
-}
-
-.hamburgesas, .entra{
-	font-size: 18px;
-	border-radius: 10px;
-	background-color: #7E63AB !important;
-	color: #fff !important;
-}
-
-.mexican{
-	font-size: 18px;
-	border-radius: 10px;
-	border: 2px solid #EF3946;
-}
