--- a/src/app/dashboard/pages/table/table.component.html
+++ b/src/app/dashboard/pages/table/table.component.html
@@ -1,7 +1,3 @@
-
-<!-- 
-<mat-slide-toggle (ngModelChange)="onChange($event)" [(ngModel)] ="isDarkTheme"></mat-slide-toggle> -->
-
 <div class="col-10 m-auto mt-5 mat-app-background">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table1">
       <!-- Id Column -->
@@ -14,8 +10,8 @@
       <ng-container matColumnDef="active">
         <th mat-header-cell *matHeaderCellDef class="letra"> Activo </th>
         <td mat-cell *matCellDef="let element"> 
-          <mat-icon color="primary" *ngIf="element.active"> check_circle </mat-icon>
-          <mat-icon style="color: #707b7c" *ngIf="!element.active"> cancel </mat-icon>         
+          <mat-icon class="color-blue-water" *ngIf="element.active"> check_circle </mat-icon>
+          <mat-icon class="color-gradient-black" *ngIf="!element.active"> cancel </mat-icon>         
         </td>
       </ng-container>
     
@@ -45,8 +41,8 @@
 
       <!-- lastChange Column -->
       <ng-container matColumnDef="lastChange">
-        <th class="text-center" mat-header-cell *matHeaderCellDef class="letra"> Ultimos Cambios </th>
-        <td class="text-center p-2" mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef class="letra"> Ultimos Cambios </th>
+        <td class="p-2" mat-cell *matCellDef="let element">
           <mat-menu #menu="matMenu" class="mat-app-background">
             <div class="p-2 letra">
               <p>
@@ -65,7 +61,7 @@
           </mat-menu>
 
           <button
-            class="w-50 m-auto"
+            class="w-50"
             style="border: 1px solid #53AFB5; border-radius: 10px;"
             mat-menu-item
             [matMenuTriggerFor]="menu"
@@ -80,28 +76,28 @@
 
       <!-- actions Column -->
       <ng-container matColumnDef="actions">
-        <th class="text-center" mat-header-cell *matHeaderCellDef class="letra"> Acciones </th>
-        <td class="text-center" mat-cell *matCellDef="let element">
+        <th mat-header-cell *matHeaderCellDef class="letra"> Acciones </th>
+        <td mat-cell *matCellDef="let element">
           <mat-menu #menu="matMenu">
             <button
               mat-menu-item
               aria-label="Otra acción"
             >
-              <mat-icon color="primary">edit</mat-icon> Editar
+              <mat-icon class="color-blue-water">edit</mat-icon> Editar
             </button>
 
             <button
               mat-menu-item
               aria-label="Otra acción"
             >
-              <mat-icon color="primary">close</mat-icon> Quitar de staff
+              <mat-icon class="color-blue-water">close</mat-icon> Quitar de staff
             </button>
 
             <button
               mat-menu-item
               aria-label="Otra acción"
             >
-              <mat-icon color="primary">delete</mat-icon> Baja
+              <mat-icon class="color-blue-water">delete</mat-icon> Baja
             </button> 
           </mat-menu>
 
@@ -111,12 +107,12 @@
             aria-label="Más opciones"
             matTooltip="Más opciones"
           >
-            <mat-icon color="primary">menu</mat-icon>
+            <mat-icon class="color-blue-water">menu</mat-icon>
           </button>
         </td>
       </ng-container>
     
-      <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color: #53AFB5; color: #fff;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" style="color: #fff;" class="bg-blue-water"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
