--- a/src/app/dashboard/pages/footer/footer.component.html
+++ b/src/app/dashboard/pages/footer/footer.component.html
@@ -7,12 +7,14 @@
     </button>
 </div>
 
-<div class="row m-auto mt-1">
-    <div class="slider col-11 m-auto mt-2 mb-4 mat-app-background slideSec" id="slider">
-        <ul class="slides">
-          <li class="slide" *ngFor="let prom of PROMOCION">
-            <p>{{prom.prom}}</p>
-          </li>
-        </ul>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide m-5" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" style="background-color: aqua;">
+      <h2 class="d-block w-100"> Hola </h2>
     </div>
+    <div class="carousel-item" style="background-color:brown" *ngFor="let prom of PROMOCION">
+      <h2 class="d-block w-100"> {{prom.prom}} </h2>
+    </div>
+  </div>
 </div>
