--- a/src/assets/scss/themes.scss
+++ b/src/assets/scss/themes.scss
@@ -2,34 +2,26 @@
 
 @include mat.core();
 
-$light-theme-2Section: mat.define-light-theme(
-    (
-        color: (
-            primary: mat.define-palette(mat.$teal-palette, 300),
-            accent: mat.define-palette(mat.$brown-palette, 400),
-        ),
-        typography: mat.define-typography-config(),
-        density: 0,
-    )
-);
+$light-theme-2Section: mat.define-light-theme((
+  color: (
+    primary: mat.define-palette(mat.$teal-palette, 300),
+    accent: mat.define-palette(mat.$brown-palette, 400),
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
+));
 
-$dark-theme-2Section: mat.define-dark-theme(
-    (
-        color: (
-            primary: mat.define-palette(mat.$teal-palette, 300),
-            accent: mat.define-palette(mat.$green-palette, A200),
-        ),
-        typography: mat.define-typography-config(),
-        density: 0,
-    )
-);
+$dark-theme-2Section: mat.define-dark-theme((
+  color: (
+    primary: mat.define-palette(mat.$teal-palette, 300),
+    accent: mat.define-palette(mat.$green-palette, A200),
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
+));
 
-.light-mode-2section{
-    @include mat.all-component-themes($light-theme-2Section);
-}
+.light-mode-2section{ @include mat.all-component-themes($light-theme-2Section);}
 
-.dark-mode-2section{
-    @include mat.all-component-themes($dark-theme-2Section);
-}
+.dark-mode-2section{ @include mat.all-component-themes($dark-theme-2Section); }
 
 
